refactor: change structure of the project

--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ ul {
   list-style: none;
 }
 
-.page-header__container, .hero__container {
+.header__container, .hero__container {
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -39,19 +39,19 @@ ul {
 }
 
 @media screen and (max-width: 448px) {
-  .page-header__container, .hero__container {
+  .header__container, .hero__container {
     width: 448px;
   }
 }
 
 @media screen and (min-width: 720px) {
-  .page-header__container, .hero__container {
+  .header__container, .hero__container {
     width: 720px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .page-header__container, .hero__container {
+  .header__container, .hero__container {
     width: 1200px;
   }
 }
@@ -68,7 +68,7 @@ ul {
           justify-content: center;
 }
 
-.page-header {
+.header {
   position: absolute;
   top: 0;
   right: 0;
@@ -77,7 +77,7 @@ ul {
   padding: 25px 0;
 }
 
-.page-header__container {
+.header__container {
   position: relative;
   overflow: hidden;
 }
