--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -19,7 +19,7 @@
 }
 
 .hero__title {
-  padding-bottom: 20px;
+  margin-bottom: 20px;
 
   font-weight: 700;
   font-size: 64px;
@@ -32,7 +32,7 @@
 .hero__text {
   margin-left: auto;
   margin-right: auto;
-  padding-bottom: 30px;
+  margin-bottom: 30px;
   max-width: 504px;
 
   font-size: 18px;
@@ -40,23 +40,12 @@
 }
 
 .hero__button {
-  display: inline-block;
+  @extend %btnStyle;
   margin-bottom: 183px;
-  padding: 15px 47px;
-
-  background-color: $bg-btn;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  cursor: pointer;
-
-  font-weight: 700;
-  text-transform: uppercase;
-  color: $contrast-color;
 }
 
 .socials {
   @extend %centeredFlex;
-
-  
 }
 
 .socials__item {
