refactor: change structure of the project

--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -3,7 +3,7 @@ body {
     color: $primary-text-color;
 
     font-family: $font-family;
-    letter-spacing: 0.03em;
+    letter-spacing: 1px;
     font-size: 14px;
     line-height: 1.4;
 }
