--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -24,17 +24,23 @@
   justify-content: center;
 }
 
-%section {
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
+%btnStyle {
+  display: inline-block;
+  padding: 15px 47px;
+  transition: all $timing-function;
 
-%section-title {
-  margin-top: 0;
-  margin-bottom: 30px;
+  background-color: $bg-btn;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
 
   font-weight: 700;
-  font-size: 28px;
-  line-height: 1.18;
-  text-align: center;
+  text-transform: uppercase;
+  color: $contrast-color;
+  text-decoration: none;
+  border: none;
+
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+  }
 }
