--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,12 +1,13 @@
 // палитра цветов
 $contrast-color:  #FFFFFF;
-$accent-color: #ff6b08;
 $title-color:  #373737;
 $primary-text-color: #4E4E4E;
 $secondary-text-color: #818181;
 $bg-color: #F5F6F7;
 $bg-btn:#00AFDB;
 $bg-footer: #000000;
+$accent-color: #009CC2;
+
 
 // время анимации
 $timing-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
