feat: add rappresent section

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body {
   background-color: #FFFFFF;
   color: #4E4E4E;
   font-family: Roboto, sans-serif;
-  letter-spacing: 0.03em;
+  letter-spacing: 1px;
   font-size: 14px;
   line-height: 1.4;
 }
@@ -31,7 +31,7 @@ ul {
   list-style: none;
 }
 
-.header__container, .hero__container {
+.header__container, .hero__container, .rappresent__container {
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -39,19 +39,19 @@ ul {
 }
 
 @media screen and (max-width: 448px) {
-  .header__container, .hero__container {
+  .header__container, .hero__container, .rappresent__container {
     width: 448px;
   }
 }
 
 @media screen and (min-width: 720px) {
-  .header__container, .hero__container {
+  .header__container, .hero__container, .rappresent__container {
     width: 720px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .header__container, .hero__container {
+  .header__container, .hero__container, .rappresent__container {
     width: 1200px;
   }
 }
@@ -68,6 +68,26 @@ ul {
           justify-content: center;
 }
 
+.hero__button, .rappresent__button {
+  display: inline-block;
+  padding: 15px 47px;
+  -webkit-transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #00AFDB;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  text-decoration: none;
+  border: none;
+}
+
+.hero__button:hover, .rappresent__button:hover, .hero__button:focus, .rappresent__button:focus {
+  background-color: #009CC2;
+}
+
 .header {
   position: absolute;
   top: 0;
@@ -79,7 +99,6 @@ ul {
 
 .header__container {
   position: relative;
-  overflow: hidden;
 }
 
 .logo {
@@ -122,7 +141,6 @@ ul {
 
 .site-nav__item--active {
   opacity: 1;
-  font-weight: 500;
   color: #FFFFFF;
 }
 
@@ -145,17 +163,17 @@ ul {
   padding-bottom: 90px;
   max-width: 1600px;
   text-align: center;
-  background-image: url("../img/bg-image.jpg");
+  background-image: url("../img/hero/bg-image.jpg");
 }
 
 @media screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../img/bg-image@2x.jpg");
+    background-image: url("../img/hero/bg-image@2x.jpg");
   }
 }
 
 .hero__title {
-  padding-bottom: 20px;
+  margin-bottom: 20px;
   font-weight: 700;
   font-size: 64px;
   line-height: 1.17;
@@ -167,30 +185,65 @@ ul {
 .hero__text {
   margin-left: auto;
   margin-right: auto;
-  padding-bottom: 30px;
+  margin-bottom: 30px;
   max-width: 504px;
   font-size: 18px;
   color: #FFFFFF;
 }
 
 .hero__button {
-  display: inline-block;
   margin-bottom: 183px;
-  padding: 15px 47px;
-  background-color: #00AFDB;
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  cursor: pointer;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #FFFFFF;
 }
 
 .socials__item {
+  -webkit-transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #FFFFFF;
+  fill: currentColor;
+  stroke: currentColor;
 }
 
 .socials__item:not(:last-child) {
   margin-right: 30px;
+}
+
+.socials__item:hover, .socials__item:focus {
+  color: #009CC2;
+}
+
+.rappresent {
+  padding-top: 120px;
+  padding-bottom: 140px;
+}
+
+.rappresent__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.rappresent__title {
+  padding-bottom: 20px;
+  max-width: 367px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.167;
+  color: #373737;
+  text-transform: uppercase;
+}
+
+.rappresent__text {
+  margin-bottom: 30px;
+  max-width: 407px;
+}
+
+.rappresent__text--bold {
+  font-weight: 500;
+  color: #373737;
 }
 /*# sourceMappingURL=main.css.map */
