--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,5 +12,7 @@
 
 // Оформление секций
 @import "./components/hero";
-@import "./components/service";
+@import "./components/rappresent";
+@import "./components/our-community";
+@import "./components/implement";
 
