--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -9,6 +9,10 @@
   padding-top: 230px;
   padding-bottom: 90px;
   max-width: 1600px;
+  background-color: rgba(0, 0, 0, 0.6);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 
   text-align: center;
   background-image: url('../img/hero/bg-image.jpg');
