--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,4 +15,5 @@
 @import "./components/rappresent";
 @import "./components/our-community";
 @import "./components/implement";
+@import "./components/sing-up";
 
