--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -56,7 +56,9 @@
   &:not(:last-child) {
     margin-right: 30px;
   }
+}
 
+.socials__link {
   transition: all $timing-function;
 
   color: $contrast-color;
