feat: add download section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,4 +16,5 @@
 @import "./components/our-community";
 @import "./components/implement";
 @import "./components/sing-up";
+@import "./components/download";
 
