--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ ul {
   padding-right: 15px;
 }
 
-.site-nav, .socials, .rappresent__container, .our-community__container, .implement__container, .form, .download__button {
+.site-nav, .socials, .rappresent__container, .our-community__container, .implement__container, .form, .download__buttons, .download__button, .download__icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -395,17 +395,33 @@ ul {
 }
 
 .download__button {
-  display: inline-block;
-  width: 186px;
-  height: 46px;
-  text-align: center;
+  margin-right: 30px;
 }
 
-.download__button span {
+.download__btn {
+  width: 127px;
+  height: 46px;
+  text-align: center;
+  -webkit-transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #00AFDB;
+  cursor: pointer;
+  text-decoration: none;
+  border: none;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
   color: #FFFFFF;
+}
+
+.download__btn:hover, .download__btn:focus {
+  background-color: #009CC2;
+}
+
+.download__icon {
+  width: 59px;
+  height: 46px;
+  background-color: #009CC2;
 }
 /*# sourceMappingURL=main.css.map */
