feat: add footer

--- a/css/main.css
+++ b/css/main.css
@@ -31,14 +31,14 @@ ul {
   list-style: none;
 }
 
-.header__container, .hero__container, .rappresent__container, .our-community__container, .implement__container, .sing-up__container, .download__container {
+.header__container, .hero__container, .rappresent__container, .our-community__container, .implement__container, .sing-up__container, .download__container, .footer__container {
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
 }
 
-.site-nav, .socials, .rappresent__container, .our-community__container, .implement__container, .form, .download__buttons, .download__button, .download__icon {
+.site-nav, .socials, .rappresent__container, .our-community__container, .implement__container, .form, .download__buttons, .download__button, .download__icon, .footer__container, .footer__list, .footer__item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -423,5 +423,48 @@ ul {
   width: 59px;
   height: 46px;
   background-color: #009CC2;
+}
+
+.footer {
+  padding-top: 60px;
+  padding-bottom: 80px;
+  background-color: #000000;
+}
+
+.footer__container {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-width: 1280px;
+}
+
+.footer__item:not(:last-child) {
+  margin-right: 20px;
+}
+
+.footer__item:not(:last-child)::after {
+  display: inline-block;
+  margin-left: 20px;
+  width: 8px;
+  height: 0px;
+  background-color: #4E4E4E;
+  border: 0.5px solid #4E4E4E;
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+  content: '';
+}
+
+.footer__link {
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #FFFFFF;
+}
+
+.footer__link:hover, .footer__link:focus {
+  color: #009CC2;
+}
+
+.footer__copy {
+  color: #818181;
 }
 /*# sourceMappingURL=main.css.map */
