--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,4 +17,5 @@
 @import "./components/implement";
 @import "./components/sing-up";
 @import "./components/download";
+@import "./components/footer";
 
